Regression: Unwrap angle based fails with seams. #110729

Closed
opened 2023-08-02 20:48:17 +02:00 by Eugenio Pignataro · 10 comments

System Information
Operating system: Linux-5.19.0-50-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.125.06

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-02 10:30, hash: 7cc3ef326057
Likely broken by a35ad5899f

Short description of error
If you try to make an unwrap on the Monkey (it is only an example) blender gives you an error "Unwrap failed to solve...."
Conformal works fine, the problem is on Angled Based.

Exact steps for others to reproduce the error
Open file 110729
Press U to unwrap

**System Information** Operating system: Linux-5.19.0-50-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.125.06 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-02 10:30, hash: `7cc3ef326057` Likely broken by a35ad5899fca168e9457af98b7ff11a7c4000ac9 **Short description of error** If you try to make an unwrap on the Monkey (it is only an example) blender gives you an error "Unwrap failed to solve...." Conformal works fine, the problem is on Angled Based. **Exact steps for others to reproduce the error** Open file [110729](https://projects.blender.org/attachments/e90b06fe-fea8-4d80-b1a7-f5730ad2ee41) Press U to unwrap
Eugenio Pignataro added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-02 20:48:18 +02:00

I can't reproduce the issue here. Does it fail with seams anywhere? or do they have to be marked in a particular way? if so please provide .blend file.

I can't reproduce the issue here. Does it fail with seams anywhere? or do they have to be marked in a particular way? if so please provide .blend file.
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-08-03 03:49:04 +02:00

I see the problem too, it seems that angle unwrap fails when trying to unwrap more than two faces at a time
This issue didn't happen a few days ago, it was possible since 2.4x to select a few faces and unwrap, without adding seams

image

I see the problem too, it seems that angle unwrap fails when trying to unwrap more than two faces at a time This issue didn't happen a few days ago, it was possible since 2.4x to select a few faces and unwrap, without adding seams <video src="/attachments/a8723d38-3d50-4a47-a3ed-19ac6c4dfdf2" title="2023-08-03 03-04-01.webm" controls></video> ![image](/attachments/d1db2d03-e278-4927-bf94-c2d323fef543)

Even if seams are added it keeps failing
image

Even if seams are added it keeps failing ![image](/attachments/cd756e28-cd6e-424b-a33a-aeaafcc519cd)
176 KiB
Author
Member

Hi!
Here is the blend.
It only happens in "make" build. Daily build works fine.
image

Hi! Here is the blend. It only happens in "make" build. Daily build works fine. ![image](/attachments/eb96f449-379c-483e-a9d6-9182ae1325c5)
Author
Member

I add this information.
Daily build on Ubuntu, same problem.

Attached video.

I add this information. Daily build on Ubuntu, same problem. Attached video.
Author
Member

I add one more demo!
It is easy to see the problem here.
2 polygons works fine, but 3 gives error.

Video attached.

I add one more demo! It is easy to see the problem here. 2 polygons works fine, but 3 gives error. Video attached.
Richard Antalik changed title from Unwrap angle based error. to Regression: Unwrap angle based fails with seams. 2023-08-05 02:04:03 +02:00

I had to do a lot of skipping when bisecting, but seems that a35ad5899f is first bad commit.
CC @Chris_Blackbourn

I have also bisected error message displayed and this started somewhere between e8289c0aff and 6f1f2b9830

I had to do a lot of skipping when bisecting, but seems that a35ad5899fca168e9457af98b7ff11a7c4000ac9 is first bad commit. CC @Chris_Blackbourn I have also bisected error message displayed and this started somewhere between e8289c0affb76cbbc967765b22aa939dad6e9cad and 6f1f2b98305e9751e9ff3bfc74bc8e132eb3fe60

@iss i usually compile using "make update" "make release", is there a way to do a "make "un - update""? or something to build to an early state, relatively simple im not a developer, instead of the last, so i could help a bit more narrowing where the bugs started

@iss i usually compile using "make update" "make release", is there a way to do a "make "un - update""? or something to build to an early state, relatively simple im not a developer, instead of the last, so i could help a bit more narrowing where the bugs started

you can git checkout sha1-of-your-choice to switch to earlier state. But there is chance it won't compile due to library updates if you go too much into past. make lite could help then.

you can `git checkout sha1-of-your-choice` to switch to earlier state. But there is chance it won't compile due to library updates if you go too much into past. `make lite` could help then.

any news on this bug? what happen with @Chris_Blackbourn? did his contract end or just taking vacations?

any news on this bug? what happen with @Chris_Blackbourn? did his contract end or just taking vacations?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-08 14:31:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110729
No description provided.