Fix #110729: Unwrap angle based fails with seams

Regression [0] which merged index assignment into an earlier loop.
This caused the indices to be overwritten by p_chart_abf_solve
causing unwrap to fail.

[0]: 8ace65e3c683e1c4a8ce89b419d360fd870f6cd6